# sdsplash

./: .gitignore  CMakeLists.txt  README.md  lottie.json  meson.build  sdsplash.c  sdsplash.cc
.github/workflows/: ci.yml
